--- a/RNNs/PlainRNN/Plain_RNN.ipynb
+++ b/RNNs/PlainRNN/Plain_RNN.ipynb
@@ -44,28 +44,27 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 207
+          "height": 190
         },
-        "outputId": "18048573-b7f6-43d8-8a13-1b409c596256"
+        "outputId": "deedcf20-cb31-49f0-c21e-f8e5dd724cab"
       },
       "source": [
         "!pip install git+https://github.com/cuongvng/neural-networks-with-PyTorch"
       ],
-      "execution_count": 1,
+      "execution_count": 52,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Collecting git+https://github.com/cuongvng/neural-networks-with-PyTorch\n",
-            "  Cloning https://github.com/cuongvng/neural-networks-with-PyTorch to /tmp/pip-req-build-iyhthq1s\n",
-            "  Running command git clone -q https://github.com/cuongvng/neural-networks-with-PyTorch /tmp/pip-req-build-iyhthq1s\n",
+            "  Cloning https://github.com/cuongvng/neural-networks-with-PyTorch to /tmp/pip-req-build-admdixnc\n",
+            "  Running command git clone -q https://github.com/cuongvng/neural-networks-with-PyTorch /tmp/pip-req-build-admdixnc\n",
+            "Requirement already satisfied (use --upgrade to upgrade): train-plot-utils==1.0 from git+https://github.com/cuongvng/neural-networks-with-PyTorch in /usr/local/lib/python3.6/dist-packages\n",
             "Building wheels for collected packages: train-plot-utils\n",
             "  Building wheel for train-plot-utils (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
-            "  Created wheel for train-plot-utils: filename=train_plot_utils-1.0-cp36-none-any.whl size=5563 sha256=fa15a359b31c0418acea923a33e2b4c546eccbd7cfcfa97f895eb77cb65251ea\n",
-            "  Stored in directory: /tmp/pip-ephem-wheel-cache-89lcfqrv/wheels/f4/9e/b4/490959541c854701592541b5fc01eb4bf691e878c4496d3517\n",
-            "Successfully built train-plot-utils\n",
-            "Installing collected packages: train-plot-utils\n",
-            "Successfully installed train-plot-utils-1.0\n"
+            "  Created wheel for train-plot-utils: filename=train_plot_utils-1.0-cp36-none-any.whl size=5563 sha256=5a116f30929ac1fa7e1063aa194aaaa440f0d3f7f600e32cc5deac59e5a3dbb5\n",
+            "  Stored in directory: /tmp/pip-ephem-wheel-cache-zdel46r_/wheels/f4/9e/b4/490959541c854701592541b5fc01eb4bf691e878c4496d3517\n",
+            "Successfully built train-plot-utils\n"
           ],
           "name": "stdout"
         }
@@ -90,19 +89,19 @@
           "base_uri": "https://localhost:8080/",
           "height": 68
         },
-        "outputId": "6d88afde-fd48-4b6c-d5f3-bfe2774d1fb1"
+        "outputId": "8f320e8c-f11e-4bf4-ee9c-715f11053476"
       },
       "source": [
         "!curl https://raw.githubusercontent.com/cuongvng/neural-networks-with-PyTorch/master/RNNs/data/EURUSD.csv > EURUSD.csv"
       ],
-      "execution_count": 2,
+      "execution_count": 53,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
             "                                 Dload  Upload   Total   Spent    Left  Speed\n",
-            "\r  0     0    0     0    0     0      0      0 --:--:-- --:--:-- --:--:--     0\r100 1864k  100 1864k    0     0  4366k      0 --:--:-- --:--:-- --:--:-- 4366k\n"
+            "\r  0     0    0     0    0     0      0      0 --:--:-- --:--:-- --:--:--     0\r100 1864k  100 1864k    0     0  4305k      0 --:--:-- --:--:-- --:--:-- 4305k\n"
           ],
           "name": "stdout"
         }
@@ -117,7 +116,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "1e2f05cf-7471-4651-86c3-fdcb29b436e4"
+        "outputId": "78f32c10-bde3-4fc8-a7ab-7fe76a8f6da4"
       },
       "source": [
         "import torch\n",
@@ -127,6 +126,8 @@
         "import sys\n",
         "sys.path.append(\"../..\")\n",
         "from utils.rnn_dataset_creator import ForexDataset\n",
+        "from utils.timer import Timer\n",
+        "from utils.plot import RealTimeVisualizer\n",
         "import matplotlib.pyplot as plt\n",
         "%matplotlib inline\n",
         "import pandas as pd\n",
@@ -134,7 +135,7 @@
         "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
         "print(device)"
       ],
-      "execution_count": 3,
+      "execution_count": 54,
       "outputs": [
         {
           "output_type": "stream",
@@ -164,14 +165,14 @@
           "base_uri": "https://localhost:8080/",
           "height": 499
         },
-        "outputId": "b031a82b-212a-4b43-9a32-dd0b186bef1d"
+        "outputId": "464fbe89-985c-4e31-c6b4-420491cf52db"
       },
       "source": [
         "data = pd.read_csv(\"EURUSD.csv\")\n",
         "ax = data[\"Ask\"].plot(figsize=(12,8), title=\"EUR-USD on 1 trading day\")\n",
         "plt.show()"
       ],
-      "execution_count": null,
+      "execution_count": 55,
       "outputs": [
         {
           "output_type": "display_data",
@@ -211,7 +212,7 @@
         "num_steps = 20\n",
         "batch_size = 128"
       ],
-      "execution_count": 4,
+      "execution_count": 56,
       "outputs": []
     },
     {
@@ -223,7 +224,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 102
         },
-        "outputId": "caa46c8c-6511-4c3c-e780-ee52530208d6"
+        "outputId": "abb91b7a-75a7-4d58-b433-32dc090d55de"
       },
       "source": [
         "train_size = 0.8\n",
@@ -233,7 +234,7 @@
         "print(\"Data test size:\", len(data_test))\n",
         "print(data_train[0])"
       ],
-      "execution_count": 5,
+      "execution_count": 57,
       "outputs": [
         {
           "output_type": "stream",
@@ -271,7 +272,7 @@
         "train_loader = DataLoader(dataset=data_train, batch_size=batch_size, shuffle=False, num_workers=4)\n",
         "test_loader = DataLoader(dataset=data_test, batch_size=batch_size, shuffle=False, num_workers=4)"
       ],
-      "execution_count": 6,
+      "execution_count": 58,
       "outputs": []
     },
     {
@@ -284,7 +285,7 @@
       "source": [
         ""
       ],
-      "execution_count": null,
+      "execution_count": 16,
       "outputs": []
     },
     {
@@ -338,6 +339,10 @@
         "\n",
         "In our time-series problem, we are going to predict the next forex rate given a sequence of previous rate, so $o=1$.\n",
         "\n",
+        "\n",
+        "When it comes to inference, how can we make `n_pred` values that come immediately after our input series? Well, we can make one prediction at a time, then append that to the input to predict the next one, and so on.\n",
+        "\n",
+        "\n",
         "**In short, the RNN model has 5 parameters we need to learn: $W_{xh}, W_{hh}, b_h, W_{ho}, b_o$.**"
       ]
     },
@@ -360,16 +365,17 @@
       },
       "source": [
         "class RNN_scratch(object):\n",
-        "    def __init__(self, batch_size, num_hidden, n_features, device):\n",
+        "    def __init__(self, batch_size, num_steps, num_hidden, n_features, device):\n",
         "        self.num_hidden = num_hidden\n",
+        "        self.num_steps = num_steps\n",
         "        self.n_features = n_features\n",
         "        self.batch_size = batch_size\n",
         "        self.device = device\n",
-        "        self.init_state = self.init_state()\n",
+        "        self.current_state = self.init_state()\n",
         "        self.params = self.get_params()\n",
         "\n",
-        "    def __call__(self, inputs, state):\n",
-        "        return self.forward(inputs, state)\n",
+        "    def __call__(self, inputs):\n",
+        "        return self.forward(inputs)\n",
         "    \n",
         "    def get_params(self):\n",
         "        d = self.n_features\n",
@@ -387,22 +393,48 @@
         "    def init_state(self):\n",
         "        return torch.zeros(size=(self.batch_size, self.num_hidden), device=self.device)\n",
         "\n",
-        "    def forward(self, inputs, state):\n",
+        "    def forward(self, inputs):\n",
         "        # Input shape: (batch_size, num_steps, n_features=1)\n",
         "        # Transpose into: (num_steps, batch_size, n_features)\n",
         "        inputs = torch.transpose(inputs, dim0=0, dim1=1)\n",
         "\n",
         "        W_xh, W_hh, b_h, W_ho, b_o = self.params\n",
         "        outputs = []\n",
-        "        H = state\n",
-        "        for X in inputs:\n",
+        "\n",
+        "        H = self.current_state \n",
+        "        for X in inputs: # at each timestep\n",
         "            H = torch.tanh(torch.mm(X, W_xh) + torch.mm(H, W_hh) + b_h)\n",
         "            O = torch.mm(H, W_ho) + b_o\n",
         "            outputs.append(O)\n",
         "        \n",
-        "        return outputs, H"
+        "        self.current_state = H\n",
+        "        # shape of output: (num_steps, batch_size, num_features=1)\n",
+        "        \n",
+        "        return outputs, self.current_state\n",
+        "    \n",
+        "    def predict(self, input:list, n_pred:int) -> list:\n",
+        "        predictions = []\n",
+        "\n",
+        "        # Reshape input to be compatible with the network\n",
+        "        input = torch.tensor(input).reshape((1, self.num_steps, 1))\n",
+        "\n",
+        "        for _ in range(n_pred):\n",
+        "            outputs, self.current_state = self.forward(input)\n",
+        "\n",
+        "            # Delete the element at the first timestep in the input then append the output of the last timestep\n",
+        "            last_output = outputs[-1][0].tolist()\n",
+        "            input = input.tolist()\n",
+        "            del input[0][0]\n",
+        "            input[0].append(last_output)\n",
+        "            input = torch.tensor(input)\n",
+        "\n",
+        "            # Save prediction\n",
+        "            predictions.append(last_output[0])\n",
+        "\n",
+        "        return predictions\n",
+        "\n"
       ],
-      "execution_count": 20,
+      "execution_count": 59,
       "outputs": []
     },
     {
@@ -412,29 +444,47 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 51
+          "height": 71
         },
-        "outputId": "d5f8733e-3068-4a40-d1fa-e7d16d8cc0bf"
+        "outputId": "5956dec6-2fc8-4f1c-e763-59525939dabe"
       },
       "source": [
         "# A sanity check\n",
-        "inputs = torch.randn(size=(batch_size, num_steps, 1))\n",
-        "rnn = RNN_scratch(batch_size=batch_size, num_hidden=512, n_features=1, device=device)\n",
-        "outputs, final_state = rnn(inputs, rnn.init_state)\n",
-        "print(outputs[-1].shape)\n",
-        "print(final_state.shape)"
+        "inputs = torch.randn(size=(1, num_steps, 1))\n",
+        "rnn = RNN_scratch(batch_size=batch_size, num_steps=num_steps, num_hidden=512, n_features=1, device=device)\n",
+        "# outputs, final_state = rnn(inputs)\n",
+        "print(rnn.predict(inputs, 5))"
       ],
-      "execution_count": 21,
+      "execution_count": 51,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "torch.Size([128, 1])\n",
-            "torch.Size([128, 512])\n"
+            "[3.058377504348755, -22.121660232543945, 18.592552185058594, -18.59996223449707, -5.9178009033203125]\n"
           ],
           "name": "stdout"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "/usr/local/lib/python3.6/dist-packages/ipykernel_launcher.py:52: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n"
+          ],
+          "name": "stderr"
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "k7jE2sC6iD75",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "net = RNN_scratch(batch_size=batch_size, num_steps=num_steps, num_hidden=512, n_features=1, device=device)"
+      ],
+      "execution_count": 61,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -444,7 +494,68 @@
         "colab": {}
       },
       "source": [
-        ""
+        "# Training\n",
+        "\n",
+        "def evaluate_rnn(net, test_loader, device):\n",
+        "    pass\n",
+        "\n",
+        "def train_rnn(net, device, train_loader, test_loader, optimizer, criterion, n_epochs):\n",
+        "    timer = Timer()\n",
+        "    visualizer = RealTimeVisualizer(xlabel=\"epoch\", xlim=[0, n_epochs],\n",
+        "                                    legend=['train loss', 'test loss'])\n",
+        "\n",
+        "    net.to(device)\n",
+        "\n",
+        "    for epoch in range(n_epochs):\n",
+        "        timer.start()\n",
+        "        for i, data in enumerate(train_loader):\n",
+        "            X, y = data\n",
+        "            X = X.reshape((X.shape[0], X.shape[1], 1))\n",
+        "            X, y = X.to(device), y.to(device)\n",
+        "\n",
+        "            optimizer.zero_grad()\n",
+        "            \n",
+        "            outputs, state = net(X)\n",
+        "            y_hat = outputs[-1,:,:].reshape(batch_size)\n",
+        "\n",
+        "            loss = criterion(y_hat, y)\n",
+        "            loss.backward()\n",
+        "            \n",
+        "            optimizer.step()\n",
+        "\n",
+        "            # Plot train acc, train loss every 100 batches\n",
+        "            if i % 99 == 0:\n",
+        "                visualizer.add_point(x=epoch+i/len(train_loader),\n",
+        "                                     y=[train_loss, None, None])\n",
+        "\n",
+        "            # Free up GPU memory\n",
+        "            del X, y, y_hat\n",
+        "            torch.cuda.empty_cache()\n",
+        "\n",
+        "        # Evaluate\n",
+        "\n",
+        "        \n",
+        "        timer.stop()\n",
+        "\n",
+        "    total_training_time = timer.sum()\n",
+        "    print(\"Total training time: {}\".format(total_training_time))\n",
+        "    print(\"train loss: {:.4f}\".format(train_loss.item()))\n",
+        "        #   \"\\ntest loss: {:.4f}\".format(test_loss.item()))\n",
+        "\n"
+      ],
+      "execution_count": 60,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "d19FyeANhxTd",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "def sgd(params, lr, batch_size)\n",
+        "n_epochs = 10\n"
       ],
       "execution_count": null,
       "outputs": []
